--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
       <button class="operation" id="equal">=</button>
     </div>
   </div>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
